# codectx

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_v3.0.0.md  heritage_test.md  pyproject.toml  requirements.txt  setup.py  test_heritage.py
.github/workflows/: tests.yml
codectx/: __init__.py  __main__.py  cli.py  constants.py  discovery.py  processing.py  static_analyzer.py  ui.py
codectx/core/: __init__.py  discovery.py  models.py  processor.py  summary_parser.py
codectx/modes/: __init__.py  direct.py  interactive.py  update.py
codectx/ui/: __init__.py  components.py
codectx/utils/: __init__.py  api_client.py  config.py  configuration.py  file_processor.py  file_writer.py  ignore_handler.py  utils.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_basic.py
tests/unit/: __init__.py  test_discovery.py  test_smoke.py  test_static_analyzer.py
