[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codectx"
version = "2.1.0"
description = "AI-powered code context and file summarization tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RMLaroche", email = "rmlaroche@users.noreply.github.com"}
]
keywords = ["ai", "summarization", "code", "context", "documentation", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "requests>=2.25.1",
    "rich>=13.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/RMLaroche/codectx"
Repository = "https://github.com/RMLaroche/codectx"
Issues = "https://github.com/RMLaroche/codectx/issues"

[project.scripts]
codectx = "codectx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codectx*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true